--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     max-width: 100vw;
     max-height: 96vh;
     overflow: hidden;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 20px rgba(0 0 0 / 40%);
 }
 
 .file-name {
@@ -18,26 +18,18 @@
     color: var(--text-normal);
     text-align: center;
     margin-bottom: 5px;
-
     display: block;
     word-break: break-all;
     max-width: 180px;
 }
 
-.preview-div img {
+.preview-div img,
+video {
     max-width: 100%;
     max-height: 100%;
-
     display: block;
     margin: 0 auto;
-}
-
-.preview-div video {
-    max-width: 100%;
-    max-height: 100%;
-
-    display: block;
-    margin: 0 auto;
+    object-fit: contain;
 }
 
 .preview-header {
@@ -45,7 +37,6 @@
     font-size: 12px;
     margin-bottom: 5px;
     text-align: center;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
